--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -201,7 +201,7 @@
 }
 
 .task-manager{
-    width: 40vw;
+    
     &__list{
         list-style: none;
     }
